# tension

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
cmake-scripts/: tf_c.cmake  tf_cc_ops.cmake  tf_core_cpu.cmake  tf_core_direct_session.cmake  tf_core_distributed_runtime.cmake  tf_core_framework.cmake  tf_core_kernels.cmake  tf_core_ops.cmake  tf_core_profiler.cmake  tf_grappler.cmake  tf_label_image_example.cmake  tf_proto_texts.cmake  tf_protos.cmake  tf_python.cmake  tf_serving.cmake  tf_serving_protos.cmake  tf_shared_lib.cmake  tf_stream_executor.cmake  tf_tests.cmake  tf_tools.cmake  tf_tutorials.cmake
tensorflow/contrib/cmake/: CMakeLists.txt  tf_core_cpu.cmake  tf_core_framework.cmake  tf_core_kernels.cmake  tf_core_ops.cmake  tf_tools.cmake
tensorflow/core/util/: version_info.cc
tensorflow_serving/apis/: CMakeLists.txt  model_service.proto  prediction_service.proto  session_service.proto
tensorflow_serving/apis/internal/: CMakeLists.txt
tensorflow_serving/batching/: CMakeLists.txt
tensorflow_serving/config/: CMakeLists.txt
tensorflow_serving/core/: CMakeLists.txt
tensorflow_serving/core/test_util/: CMakeLists.txt
tensorflow_serving/model_servers/: CMakeLists.txt  grpc_status_util.h  main.cc  model_service_impl.cc  model_service_impl.h
tensorflow_serving/model_servers/test_util/: CMakeLists.txt
tensorflow_serving/resources/: CMakeLists.txt
tensorflow_serving/servables/hashmap/: CMakeLists.txt
tensorflow_serving/servables/tensorflow/: CMakeLists.txt
tensorflow_serving/sources/storage_path/: CMakeLists.txt
tensorflow_serving/test_util/: CMakeLists.txt
tensorflow_serving/tools/pip_package/: CMakeLists.txt
tensorflow_serving/util/: CMakeLists.txt
